--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node app/seed/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -15,7 +16,7 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.5",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
