--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.5"
   },
