--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.11",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
@@ -26,6 +27,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250726.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
