--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "lib/mock/placeholder-data.ts",
-    "scripts/seed.js"
+    "scripts/seed.js",
+    "ai-worker/config"
   ],
   "exclude": ["node_modules"]
 }
